--- a/Earley.cabal
+++ b/Earley.cabal
@@ -37,12 +37,13 @@ library
                        Text.Earley.Grammar,
                        Text.Earley.Mixfix,
                        Text.Earley.Parser,
-                       Text.Earley.Parser.Internal
+                       Text.Earley.Parser.Internal,
+                       Text.Earley.Parser.Rewrite
   build-depends:       base >=4.6 && <5, ListLike >=4.1
   if impl(ghc < 8.0)
     build-depends:     semigroups >=0.18
   default-language:    Haskell2010
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
                        -funbox-strict-fields
 
 executable earley-english
@@ -125,7 +126,7 @@ benchmark bench
   if impl(ghc < 8.0)
     build-depends:     semigroups >=0.18
   default-language:    Haskell2010
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
 
 test-suite tests
   type:                exitcode-stdio-1.0
