--- a/Earley.cabal
+++ b/Earley.cabal
@@ -39,7 +39,7 @@ library
                        Text.Earley.Parser,
                        Text.Earley.Parser.Internal,
                        Text.Earley.Parser.Rewrite
-  build-depends:       base >=4.6 && <5, ListLike >=4.1
+  build-depends:       base >=4.6 && <5, ListLike >=4.1, containers
   if impl(ghc < 8.0)
     build-depends:     semigroups >=0.18
   default-language:    Haskell2010
